sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
a:=getNombreValeurs():Int
for (i<-0 to a-1){
	if (plusPetit(i:Int, j:Int)==true){
	return echange(i:Int, j:Int)
}
}
}

